Refactor Dockerfile for improved build process

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,32 +1,37 @@
 # ===== Build stage =====
 FROM rust:1.90-slim-bullseye AS builder
 
-# Install MUSL and build dependencies
+# Install MUSL target
 RUN apt-get update && apt-get install -y musl-tools pkg-config && \
     rustup target add x86_64-unknown-linux-musl
 
 WORKDIR /app
 
-# Copy manifest files for dependency caching
+# Copy manifest first (dependency caching)
 COPY fantasy_age_discord_bot/Cargo.toml fantasy_age_discord_bot/Cargo.lock ./fantasy_age_discord_bot/
-COPY fantasy_age_discord_bot/src ./fantasy_age_discord_bot/src
 
-# Build dependencies only
+# Create dummy src to force dependency build
+RUN mkdir -p fantasy_age_discord_bot/src && \
+    echo "fn main() {}" > fantasy_age_discord_bot/src/main.rs
+
+# Build dependencies
 WORKDIR /app/fantasy_age_discord_bot
 RUN cargo build --release --target x86_64-unknown-linux-musl || true
 
-# Rebuild with actual source
-COPY fantasy_age_discord_bot/ ./
+# Now copy REAL src
+COPY fantasy_age_discord_bot/src ./src
+
+# Build final binary
 RUN cargo build --release --target x86_64-unknown-linux-musl
 
-# ===== Runtime stage (zero-dependency) =====
+# ===== Runtime stage =====
 FROM scratch
 
-# Bring in certificates (Discord requires HTTPS)
+# Certificates (Discord requires HTTPS)
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
-# Copy statically linked Rust binary
+# Copy statically-linked binary
 COPY --from=builder /app/fantasy_age_discord_bot/target/x86_64-unknown-linux-musl/release/fantasy_age_discord_bot /
 
-# Set the startup command
+# Run it
 ENTRYPOINT ["/fantasy_age_discord_bot"]
