--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Deploy Discord Bot to Lightsail
+name: Deploy Discord Bot to Cloud Run
 
 on:
   push:
@@ -6,68 +6,46 @@ on:
 
 jobs:
   deploy:
+    name: Build & Deploy
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
-      packages: write
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
+      # Authenticate to Google Cloud
+      - name: Set up gcloud
+        uses: google-github-actions/setup-gcloud@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Cache Docker layers
-        uses: actions/cache@v4
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: Build and push Docker image
+      - name: Configure Docker auth for Artifact Registry
         run: |
-          OWNER="${{ github.repository_owner }}"
-          IMAGE_NAME="ghcr.io/${OWNER,,}/discordbotfantasyage:latest"
+          gcloud auth configure-docker europe-north1-docker.pkg.dev --quiet
 
-          echo "Building and pushing image: $IMAGE_NAME"
+      # Build & push container
+      - name: Build and push to Artifact Registry
+        run: |
+          IMAGE="europe-north1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/discord-bot/fantasy-age-bot:latest"
+          echo "Building image: $IMAGE"
 
-          docker buildx build \
-            --file Dockerfile \
-            --cache-from type=local,src=/tmp/.buildx-cache \
-            --cache-to type=local,dest=/tmp/.buildx-cache-new \
-            --tag $IMAGE_NAME \
-            --push .
+          docker build -t "$IMAGE" -f Dockerfile .
+          docker push "$IMAGE"
 
-      - name: Deploy to AWS Lightsail
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.LIGHTSAIL_HOST }}
-          username: ${{ secrets.LIGHTSAIL_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
-          script: |
-            OWNER="${{ github.repository_owner }}"
-            IMAGE_NAME="ghcr.io/${OWNER,,}/discordbotfantasyage:latest"
+      # Deploy to Cloud Run
+      - name: Deploy to Cloud Run
+        run: |
+          IMAGE="europe-north1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/discord-bot/fantasy-age-bot:latest"
 
-            echo "Pulling Docker image $IMAGE_NAME..."
-            docker pull $IMAGE_NAME || true
-
-            echo "Stopping old container..."
-            docker stop fantasy_age_discord_bot || true
-            docker rm fantasy_age_discord_bot || true
-
-            echo "Starting new container..."
-            docker run -d \
-              --name fantasy_age_discord_bot \
-              --restart unless-stopped \
-              -e DISCORD_TOKEN='${{ secrets.DISCORD_TOKEN }}' \
-              $IMAGE_NAME
+          gcloud run deploy fantasy-age-bot \
+            --image "$IMAGE" \
+            --region europe-north1 \
+            --platform managed \
+            --allow-unauthenticated \
+            --update-env-vars DISCORD_TOKEN="${{ secrets.DISCORD_TOKEN }}" \
+            --timeout=3600 \
+            --min-instances=1
