--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
+          
+      - name: Show active account
+        run: gcloud auth list
 
       - name: Configure Docker auth for Artifact Registry
         run: |
