--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Deploy Discord Bot to Cloud Run
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   deploy:
@@ -17,18 +17,21 @@ jobs:
         uses: actions/checkout@v4
 
       # Authenticate to Google Cloud
-      - name: Set up gcloud
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v1
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          export_default_credentials: true
-          verbose: true
-          
-      - name: Show active account
+
+      - name: Verify authentication
         run: gcloud auth list
 
-      - name: Configure Docker auth for Artifact Registry
+      # Configure Docker auth for Artifact Registry
+      - name: Configure Docker auth
         run: |
           gcloud auth configure-docker europe-north1-docker.pkg.dev --quiet
 
@@ -36,16 +39,13 @@ jobs:
       - name: Build and push to Artifact Registry
         run: |
           IMAGE="europe-north1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/discord-bot/fantasy-age-bot:latest"
-          echo "Building image: $IMAGE"
-
-          docker build -t "$IMAGE" -f Dockerfile .
+          docker build -t "$IMAGE" .
           docker push "$IMAGE"
 
       # Deploy to Cloud Run
       - name: Deploy to Cloud Run
         run: |
           IMAGE="europe-north1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/discord-bot/fantasy-age-bot:latest"
-
           gcloud run deploy fantasy-age-bot \
             --image "$IMAGE" \
             --region europe-north1 \
