--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Deploy Discord Bot to Cloud Run
 
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
 
 jobs:
   deploy:
@@ -13,39 +13,34 @@ jobs:
       contents: read
 
     steps:
+      # Checkout code
       - name: Checkout repository
         uses: actions/checkout@v4
 
       # Authenticate to Google Cloud
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v1
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Set up gcloud CLI
-        uses: google-github-actions/setup-gcloud@v1
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+      # Configure Docker for Artifact Registry
+      - name: Configure Docker auth for Artifact Registry
+        run: gcloud auth configure-docker europe-north1-docker.pkg.dev --quiet
 
-      - name: Verify authentication
-        run: gcloud auth list
-
-      # Configure Docker auth for Artifact Registry
-      - name: Configure Docker auth
-        run: |
-          gcloud auth configure-docker europe-north1-docker.pkg.dev --quiet
-
-      # Build & push container
+      # Build & push Docker image
       - name: Build and push to Artifact Registry
         run: |
-          IMAGE="europe-north1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/discord-bot/fantasy-age-bot:latest"
-          docker build -t "$IMAGE" .
+          IMAGE="europe-north1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:latest"
+          echo "Building image: $IMAGE"
+
+          docker build -t "$IMAGE" -f Dockerfile .
           docker push "$IMAGE"
 
       # Deploy to Cloud Run
       - name: Deploy to Cloud Run
         run: |
-          IMAGE="europe-north1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/discord-bot/fantasy-age-bot:latest"
+          IMAGE="europe-north1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:latest"
+
           gcloud run deploy fantasy-age-bot \
             --image "$IMAGE" \
             --region europe-north1 \
