--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,12 +25,13 @@ jobs:
 
       # Configure Docker for Artifact Registry
       - name: Configure Docker auth for Artifact Registry
-        run: gcloud auth configure-docker europe-north1-docker.pkg.dev --quiet
+        run: |
+          gcloud auth configure-docker europe-north2-docker.pkg.dev --quiet
 
-      # Build & push Docker image
+      # Build & push container
       - name: Build and push to Artifact Registry
         run: |
-          IMAGE="europe-north1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:latest"
+          IMAGE="europe-north2-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:latest"
           echo "Building image: $IMAGE"
 
           docker build -t "$IMAGE" -f Dockerfile .
@@ -39,13 +40,13 @@ jobs:
       # Deploy to Cloud Run
       - name: Deploy to Cloud Run
         run: |
-          IMAGE="europe-north1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:latest"
+          IMAGE="europe-north2-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:latest"
 
           gcloud run deploy fantasy-age-bot \
-            --image "$IMAGE" \
-            --region europe-north1 \
-            --platform managed \
-            --allow-unauthenticated \
-            --update-env-vars DISCORD_TOKEN="${{ secrets.DISCORD_TOKEN }}" \
-            --timeout=3600 \
-            --min-instances=1
+          --image "$IMAGE" \
+          --region europe-north2 \
+          --platform managed \
+          --allow-unauthenticated \
+          --update-env-vars DISCORD_TOKEN="${{ secrets.DISCORD_TOKEN }}" \
+          --timeout=3600 \
+          --min-instances=1
