--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,40 +13,38 @@ jobs:
       contents: read
 
     steps:
-      # Checkout code
       - name: Checkout repository
         uses: actions/checkout@v4
 
       # Authenticate to Google Cloud
-      - name: Authenticate to GCP
-        uses: google-github-actions/auth@v2
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
+      - name: Set default project
+        run: gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
+
       # Configure Docker for Artifact Registry
-      - name: Configure Docker auth for Artifact Registry
-        run: |
-          gcloud auth configure-docker europe-north2-docker.pkg.dev --quiet
+      - name: Configure Docker auth
+        run: gcloud auth configure-docker europe-north2-docker.pkg.dev --quiet
 
       # Build & push container
       - name: Build and push to Artifact Registry
         run: |
           IMAGE="europe-north2-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:latest"
-          echo "Building image: $IMAGE"
-
-          docker build -t "$IMAGE" -f Dockerfile .
+          docker build -t "$IMAGE" .
           docker push "$IMAGE"
 
       # Deploy to Cloud Run
       - name: Deploy to Cloud Run
         run: |
           IMAGE="europe-north2-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:latest"
-
           gcloud run deploy fantasy-age-bot \
-          --image "$IMAGE" \
-          --region europe-north2 \
-          --platform managed \
-          --allow-unauthenticated \
-          --update-env-vars DISCORD_TOKEN="${{ secrets.DISCORD_TOKEN }}" \
-          --timeout=3600 \
-          --min-instances=1
+            --image "$IMAGE" \
+            --region europe-north2 \
+            --platform managed \
+            --allow-unauthenticated \
+            --update-env-vars DISCORD_TOKEN="${{ secrets.DISCORD_TOKEN }}" \
+            --timeout=3600 \
+            --min-instances=1
