--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Cache Rust crates
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+
       # Authenticate to Google Cloud
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
@@ -33,9 +46,9 @@ jobs:
       - name: Build and push to Artifact Registry
         run: |
           IMAGE="europe-north2-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:latest"
-          docker build -t "$IMAGE" .
-          docker push "$IMAGE"
+          docker buildx build --platform linux/amd64 -t "$IMAGE" --push .
 
+      # Deploy to Cloud Run
       - name: Deploy to Cloud Run
         run: |
           IMAGE="europe-north2-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:latest"
@@ -47,4 +60,3 @@ jobs:
             --update-env-vars DISCORD_TOKEN="${{ secrets.DISCORD_TOKEN }}" \
             --timeout=3600 \
             --min-instances=1
-
