--- a/fantasy_age_discord_bot/Cargo.toml
+++ b/fantasy_age_discord_bot/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 tiny-http = "0.12"
 serenity = "0.12"
-tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "time"] }
 rand = "0.9.2"
 dotenv = "0.15"
 regex = "1.12.2"
