--- a/fantasy_age_discord_bot/Cargo.toml
+++ b/fantasy_age_discord_bot/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tiny-http = "0.12"
-serenity = "0.12"
-tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "time"] }
+serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend"] }
+tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
 rand = "0.9.2"
-dotenv = "0.15"
 regex = "1.12.2"
+dotenv = "0.15"
 tracing = "0.1"
 tracing-subscriber = "0.3.20"
 anyhow = { version = "1.0", default-features = false }
+tiny-http = "0.12"
