--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,20 +16,25 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: x86_64-unknown-linux-musl
+          profile: minimal
+          override: true
 
-      - name: Cache Rust crates
+      - name: Cache Cargo
         uses: actions/cache@v3
         with:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
+            target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-cargo-
 
-      # Authenticate to Google Cloud
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
         with:
@@ -38,17 +43,15 @@ jobs:
       - name: Set default project
         run: gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
 
-      # Configure Docker for Artifact Registry
       - name: Configure Docker auth
         run: gcloud auth configure-docker europe-north2-docker.pkg.dev --quiet
 
-      # Build & push container
-      - name: Build and push to Artifact Registry
+      - name: Build and push container
         run: |
           IMAGE="europe-north2-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:latest"
-          docker buildx build --platform linux/amd64 -t "$IMAGE" --push .
+          docker build -t "$IMAGE" .
+          docker push "$IMAGE"
 
-      # Deploy to Cloud Run
       - name: Deploy to Cloud Run
         run: |
           IMAGE="europe-north2-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:latest"
