--- a/fantasy_age_discord_bot/Cargo.toml
+++ b/fantasy_age_discord_bot/Cargo.toml
@@ -12,4 +12,4 @@ dotenv = "0.15"
 tracing = "0.1"
 tracing-subscriber = "0.3.20"
 anyhow = { version = "1.0", default-features = false }
-tiny-http = "0.12"
+tiny_http = "0.12"
