--- a/fantasy_age_discord_bot/Cargo.toml
+++ b/fantasy_age_discord_bot/Cargo.toml
@@ -12,4 +12,7 @@ dotenv = "0.15"
 tracing = "0.1"
 tracing-subscriber = "0.3.20"
 anyhow = { version = "1.0", default-features = false }
-tiny_http = "0.12"
+hyper = { version = "1", features = ["http1", "http2", "server"] }
+hyper-util = { version = "0.1", features = ["tokio"] }
+http-body-util = "0.1"
+bytes = "1"
