--- a/fantasy_age_discord_bot/Cargo.toml
+++ b/fantasy_age_discord_bot/Cargo.toml
@@ -5,14 +5,12 @@ edition = "2021"
 
 [dependencies]
 serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend"] }
-tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.21.2", features = ["full"] }
 rand = "0.9.2"
 regex = "1.12.2"
 dotenv = "0.15"
 tracing = "0.1"
 tracing-subscriber = "0.3.20"
 anyhow = { version = "1.0", default-features = false }
-hyper = { version = "1", features = ["http1", "http2", "server"] }
-hyper-util = { version = "0.1", features = ["tokio"] }
-http-body-util = "0.1"
+hyper = { version = "0.14", features = ["full"] }
 bytes = "1"
