--- a/fantasy_age_discord_bot/Cargo.toml
+++ b/fantasy_age_discord_bot/Cargo.toml
@@ -4,12 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
-rand = "0.8"
-regex = "1"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-lambda_runtime = "0.7"
-lambda_http = "0.7"
-anyhow = "1.0"
-
+serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend"] }
+tokio = { version = "1.21.2", features = ["full"] }
+rand = "0.9.2"
+regex = "1.12.2"
+dotenv = "0.15"
+tracing = "0.1"
+tracing-subscriber = "0.3.20"
+anyhow = { version = "1.0", default-features = false }
+hyper = { version = "0.14", features = ["full"] }
+bytes = "1"
