--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,64 +2,42 @@ name: Deploy Discord Bot to Cloud Run
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   deploy:
-    name: Build & Deploy
-    runs-on: ubuntu-latest
-
     permissions:
       contents: read
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: x86_64-unknown-linux-musl
-          profile: minimal
-          override: true
-
-      - name: Cache Cargo
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
 
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Set default project
+      - name: Set project
         run: gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
 
       - name: Configure Docker auth
         run: gcloud auth configure-docker europe-north2-docker.pkg.dev --quiet
 
-      - name: Build and push container
+      - name: Build & Push image
         run: |
-          IMAGE="europe-north2-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:latest"
+          IMAGE="europe-north2-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:${{ github.sha }}"
           docker build -t "$IMAGE" .
           docker push "$IMAGE"
 
       - name: Deploy to Cloud Run
         run: |
-          IMAGE="europe-north2-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:latest"
+          IMAGE="europe-north2-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/fantasy-age-discord-bot/fantasy-age-bot:${{ github.sha }}"
           gcloud run deploy fantasy-age-bot \
             --image "$IMAGE" \
             --region europe-north2 \
             --platform managed \
-            --allow-unauthenticated \
-            --update-env-vars DISCORD_TOKEN="${{ secrets.DISCORD_TOKEN }}" \
+            --min-instances=1 \
             --timeout=3600 \
-            --min-instances=1
+            --allow-unauthenticated
