--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,31 +6,37 @@ on:
 
 jobs:
   deploy:
+    runs-on: ubuntu-latest
     permissions:
       contents: read
-    runs-on: ubuntu-latest
 
     steps:
+      # Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Authenticate to Google Cloud
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
+      # Set GCP project
       - name: Set project
         run: gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
 
+      # Configure Docker authentication
       - name: Configure Docker auth
         run: gcloud auth configure-docker europe-north2-docker.pkg.dev --quiet
 
-      - name: Build & Push image
+      # Build Rust musl binary and Docker image
+      - name: Build & Push Docker image
         run: |
           IMAGE="europe-north2-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/discord-bot/fantasy-age-bot:${{ github.sha }}"
           docker build -t "$IMAGE" .
           docker push "$IMAGE"
 
+      # Deploy to Cloud Run
       - name: Deploy to Cloud Run
         run: |
           IMAGE="europe-north2-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/discord-bot/fantasy-age-bot:${{ github.sha }}"
