--- a/fantasy_age_discord_bot/Cargo.toml
+++ b/fantasy_age_discord_bot/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend"] }
+serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "webhooks"] }
 tokio = { version = "1.21.2", features = ["full"] }
 rand = "0.9.2"
 regex = "1.12.2"
