--- a/fantasy_age_discord_bot/Cargo.toml
+++ b/fantasy_age_discord_bot/Cargo.toml
@@ -4,8 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "webhooks"] }
+serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "webhooks"] }
 tokio = { version = "1.21.2", features = ["full"] }
+reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
 rand = "0.9.2"
 regex = "1.12.2"
 dotenv = "0.15"
